[package]
name = "memnir"
version = "0.4.0"
edition = "2021"
description = "Shared Claude memory across machines + sessions over Tailscale (scope-filtered sync, compact-index, doctor, dashboard)"

[[bin]]
name = "memnir"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
