[package]
name = "mymem"
version = "0.6.0"
edition = "2021"
description = "Shared Claude memory across machines + sessions over Tailscale (scope-filtered sync, version reservation, compact-index, doctor, dashboard)"

[[bin]]
name = "mymem"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
